--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:url" content="https://minearithmeticop.github.io/election-system-design-canvsa/">
     <meta property="og:title" content="Model แก้ปัญหาเลือกตั้ง 100%">
     <meta property="og:description" content="ไม่ต้องเชื่อใจใคร (Trustless) แต่ตรวจสอบได้ด้วยคณิตศาสตร์ (Traceable) | ระบบเลือกตั้งที่โปร่งใสที่ประชาชนเป็นเจ้าของคะแนนเสียงอย่างแท้จริง">
-    <meta property="og:image" content="https://placehold.co/1200x630/0f172a/34d399?text=Election+Model+100%25&font=roboto">
+    <meta property="og:image" content="https://minearithmeticop.github.io/election-system-design-canvsa/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://minearithmeticop.github.io/election-system-design-canvsa/">
     <meta property="twitter:title" content="Model แก้ปัญหาเลือกตั้ง 100%">
     <meta property="twitter:description" content="ไม่ต้องเชื่อใจใคร (Trustless) แต่ตรวจสอบได้ด้วยคณิตศาสตร์ (Traceable) | ระบบเลือกตั้งที่โปร่งใสที่ประชาชนเป็นเจ้าของคะแนนเสียงอย่างแท้จริง">
-    <meta property="twitter:image" content="https://placehold.co/1200x630/0f172a/34d399?text=Election+Model+100%25&font=roboto">
+    <meta property="twitter:image" content="https://minearithmeticop.github.io/election-system-design-canvsa/og-image.png">
 
     <!-- Import Thai Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
