Update Step 4 and 10 visual to only show numbers, no crosses

--- a/index.html
+++ b/index.html
@@ -310,13 +310,13 @@
                     <div class="step-number">4</div>
                     <div class="visual-scene">
                         <div style="display: flex; gap: 10px; justify-content: center;">
-                            <div style="width: 40px; height: 50px; background: #ef4444; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-weight: bold; color:white;">X</div>
-                            <div style="width: 40px; height: 50px; background: #3b82f6; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-weight: bold; color:white;">9</div>
+                            <div style="width: 40px; height: 50px; background: #ef4444; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-weight: bold; color:white; font-family: 'Prompt'; font-size: 1.5rem;">7</div>
+                            <div style="width: 40px; height: 50px; background: #3b82f6; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-weight: bold; color:white; font-family: 'Prompt'; font-size: 1.5rem;">9</div>
                         </div>
                         <i class="fa-solid fa-pen scene-sub" style="bottom: -5px; right: -20px; color: var(--text-primary);"></i>
                     </div>
-                    <h3>กากบาทลงคะแนน</h3>
-                    <p>เข้าคูหาและกากบาทหรือเขียนเบอร์ลงในบัตรทั้ง 2 ใบ (แบ่งตามสีประเภทการเลือกตั้ง)</p>
+                    <h3>เขียนเบอร์ผู้สมัคร</h3>
+                    <p>เข้าคูหาและ<strong>เขียนหมายเลข</strong>ลงในบัตรทั้ง 2 ใบให้ชัดเจน (แยกตามสีประเภทการเลือกตั้ง)</p>
                 </div>
             </div>
 
@@ -394,7 +394,7 @@
                     <div class="step-number">10</div>
                     <div class="visual-scene">
                         <div style="display: flex; gap: 5px; border: 1px solid var(--border); padding: 5px; border-radius: 4px; width: 80px; background: white;">
-                            <div style="flex:1; border-right: 1px dashed #ccc; display:flex; align-items:center; justify-content:center; color:black; font-weight:bold;">X</div>
+                            <div style="flex:1; border-right: 1px dashed #ccc; display:flex; align-items:center; justify-content:center; color:black; font-weight:bold; font-family: 'Prompt'; font-size: 1.2rem;">9</div>
                             <div style="flex:1; display:flex; align-items:center; justify-content:center;"><i class="fa-solid fa-qrcode" style="color:black; font-size: 1rem;"></i></div>
                         </div>
                         <i class="fa-solid fa-mobile scene-sub" style="right: -10px; bottom: -10px; color: var(--accent);"></i>
