Update election model: Fix counting flow to provincial centers and add Call to Action section

--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
                     <div class="step-number">6</div>
                     <div class="visual-scene">
                         <i class="fa-solid fa-truck-moving scene-main" style="color: var(--text-secondary);"></i>
-                        <i class="fa-solid fa-box scene-sub" style="top: -5px; right: 20px; font-size: 1.5rem;"></i>
+                        <i class="fa-solid fa-city scene-sub" style="top: -5px; right: 20px; font-size: 1.5rem;"></i>
                     </div>
-                    <h3>ขนส่งไปส่วนกลาง</h3>
-                    <p>เคลื่อนย้ายหีบบัตรไปยังศูนย์นับคะแนนกลาง ด้วยรถขนส่งที่มีระบบติดตาม GPS</p>
+                    <h3>ขนส่งไปศูนย์จังหวัด</h3>
+                    <p>เคลื่อนย้ายหีบบัตรไปยัง <strong>"ศูนย์นับคะแนนระดับจังหวัด" (77 ศูนย์ทั่วไทย)</strong> เพื่อลดความกระจัดกระจายในการควบคุม</p>
                 </div>
             </div>
 
@@ -474,6 +474,49 @@
                     <hr style="border: 0; border-top: 1px solid var(--border); margin: 20px 0;">
                     <h3>Direct Feedback Loop</h3>
                     <p>หากสแกน QR แล้วข้อมูลบนเว็บไม่ตรงกับในมือถือ สามารถกด Report แจ้ง กกต. ผ่านแอปได้ทันที</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 6. Call to Action (The 3 Core Reasons) -->
+    <div class="section-container" style="background: linear-gradient(to bottom, var(--bg-dark), #111827); border-bottom: 0;">
+        <div style="text-align: center; max-width: 800px; margin: 0 auto 60px;">
+            <h2 style="border: none; padding: 0; font-size: 3rem; margin-bottom: 20px;">ทำไมต้องเปลี่ยน?</h2>
+            <p>ระบบเดิมไม่ได้ผิดที่คน แต่ผิดที่ "การออกแบบ" ที่เปิดช่องว่างให้เกิดความผิดพลาด<br>นี่คือ 3 ข้อเสนอหลัก ที่จะอุดรูรั่วของการเลือกตั้งไทย</p>
+        </div>
+        
+        <div class="grid-3">
+            <!-- Reason 1 -->
+            <div class="card" style="border: 1px solid #ef4444; background: rgba(239, 68, 68, 0.05);">
+                <div style="font-size: 4rem; color: #ef4444; margin-bottom: 20px; font-weight: bold; font-family: 'Prompt';">01</div>
+                <h3 style="color: #ef4444; font-size: 1.8rem;">Stop Ambiguity</h3>
+                <p style="font-weight: bold; color: var(--text-primary); margin-bottom: 5px;">(เลิกกากบาท)</p>
+                <div style="margin-top: 15px; font-size: 1rem;">
+                    <p><strong>ปัญหาเก่า:</strong> กากบาททับเส้นนิดเดียว บัตรดีกลายเป็นบัตรเสีย ขึ้นอยู่กับดุลยพินิจกรรมการ</p>
+                    <p><strong>ระบบใหม่:</strong> "เขียนเลขชัดเจน" ใช้ OCR อ่านแม่นยำ 100% ตัดปัญหาการใช้ดุลยพินิจแกล้งให้บัตรเสีย</p>
+                </div>
+            </div>
+
+            <!-- Reason 2 -->
+            <div class="card" style="border: 1px solid #eab308; background: rgba(234, 179, 8, 0.05);">
+                <div style="font-size: 4rem; color: #eab308; margin-bottom: 20px; font-weight: bold; font-family: 'Prompt';">02</div>
+                <h3 style="color: #eab308; font-size: 1.8rem;">Stop Dispersion</h3>
+                <p style="font-weight: bold; color: var(--text-primary); margin-bottom: 5px;">(เลิกนับกระจัดกระจาย)</p>
+                <div style="margin-top: 15px; font-size: 1rem;">
+                    <p><strong>ปัญหาเก่า:</strong> นับ 90,000 หน่วย = 90,000 จุดเสี่ยง Human Error และบัตรเขย่งรวมกันเป็นล้านใบ</p>
+                    <p><strong>ระบบใหม่:</strong> "รวมศูนย์จังหวัด" (Provincial Center) ลดจุดเสี่ยงเหลือแค่ 77 แห่ง ควบคุมเข้มข้นได้ง่ายกว่า</p>
+                </div>
+            </div>
+
+            <!-- Reason 3 -->
+            <div class="card" style="border: 1px solid #3b82f6; background: rgba(59, 130, 246, 0.05);">
+                <div style="font-size: 4rem; color: #3b82f6; margin-bottom: 20px; font-weight: bold; font-family: 'Prompt';">03</div>
+                <h3 style="color: #3b82f6; font-size: 1.8rem;">End the Doubt</h3>
+                <p style="font-weight: bold; color: var(--text-primary); margin-bottom: 5px;">(จบข้อสงสัยด้วยมือตัวเอง)</p>
+                <div style="margin-top: 15px; font-size: 1rem;">
+                    <p><strong>ปัญหาเก่า:</strong> กาเสร็จแล้วหย่อนลงหีบ ไม่รู้อีกเลยว่าคะแนนเราไปไหน ถูกนับจริงหรือไม่</p>
+                    <p><strong>ระบบใหม่:</strong> "หางบัตรในมือคุณ" กุญแจดอกเดียวที่ใช้ไขดูในระบบได้ว่า คะแนนของคุณถูกนับแล้วหรือยัง</p>
                 </div>
             </div>
         </div>
