Clarify verify-only fingerprint check and anti-impersonation flow

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <i class="fa-solid fa-microchip scene-sub" style="top: -10px; right: -10px; color: var(--accent);"></i>
                     </div>
                     <h3>ตรวจสอบสิทธิ</h3>
-                    <p>เสียบบัตรประชาชนเข้าเครื่องอ่าน (Smart Card Reader) เพื่อยืนยันตัวตนในระบบ</p>
+                    <p>เสียบบัตรประชาชนและสแกนลายนิ้วมือเพื่อยืนยันตัวตนแบบ <strong>Verify-Only (1:1 Match)</strong> ว่า "คนถือบัตรคือเจ้าของบัตรจริง" โดยระบบส่งกลับแค่ผลผ่าน/ไม่ผ่าน และไม่เก็บลายนิ้วมือเพิ่ม</p>
                 </div>
             </div>
 
@@ -384,7 +384,7 @@
                         <i class="fa-solid fa-circle-check scene-sub" style="color: var(--accent); top: 0; right: -5px;"></i>
                     </div>
                     <h3>แอปทางรัฐแจ้งเตือน</h3>
-                    <p>User ได้รับแจ้งเตือน "ใช้สิทธิสำเร็จ" พร้อมปุ่ม <strong>Scan QR</strong> เพื่อตรวจสอบความถูกต้อง</p>
+                    <p>User ได้รับแจ้งเตือน "ใช้สิทธิสำเร็จ" และยืนยันตัวตนในแอปทางรัฐ ก่อนใช้ปุ่ม <strong>Scan QR</strong> เพื่อตรวจสอบสิทธิของตนเอง</p>
                 </div>
             </div>
 
@@ -399,8 +399,8 @@
                         </div>
                         <i class="fa-solid fa-ticket scene-sub" style="right: -10px; bottom: -10px; color: var(--accent);"></i>
                     </div>
-                    <h3>Verify with Paper Stub</h3>
-                    <p>สแกน QR Code บน <strong>"หางบัตร"</strong> ที่เก็บไว้ เพื่อตรวจสอบว่ารหัสลับของตนถูกนับคะแนนถูกต้องหรือไม่ (โดยระบบไม่รู้ว่าเป็นคุณ)</p>
+                    <h3>One-Time Verify ผ่านแอปทางรัฐ</h3>
+                    <p>สแกน QR Code บน <strong>"หางบัตร"</strong> ได้เฉพาะในแอปทางรัฐเท่านั้น และใช้ได้เพียง <strong>1 ครั้ง</strong> ต่อ 1 สิทธิ์ เมื่อยืนยันแล้ว QR จะถูกล็อกถาวร</p>
                 </div>
             </div>
 
@@ -413,7 +413,7 @@
                         <i class="fa-solid fa-list-check scene-sub" style="color: var(--accent); bottom: -5px;"></i>
                     </div>
                     <h3>Public Audit Status</h3>
-                    <p>หน้าเว็บแสดงสถานะว่าบัตรใบนี้ถูก "Verified Audit" โดยเจ้าของเสียงเรียบร้อยแล้ว (สีเขียว)</p>
+                    <p>Dashboard รวมจะแสดงสถานะว่าใบนี้ถูก "Verified" แล้ว โดยไม่เปิดให้ใครสแกนซ้ำหรือเข้าถึงข้อมูลยืนยันส่วนบุคคลได้อีก</p>
                 </div>
             </div>
 
@@ -436,11 +436,15 @@
                     </li>
                     <li>
                         <strong>"Thang Rat" Super App</strong><br>
-                        โครงสร้างพื้นฐานดิจิทัลเชื่อมต่อฐานข้อมูลประชาชน ใช้สำหรับตรวจสอบสถานะการเลือกตั้งส่วนบุคคล
+                        โครงสร้างพื้นฐานดิจิทัลเชื่อมต่อฐานข้อมูลประชาชน ใช้ยืนยันตัวตนผู้ใช้สิทธิ และรองรับการสแกนยืนยัน QR แบบ One-Time
+                    </li>
+                    <li>
+                        <strong>Biometric Verification Module</strong><br>
+                        ระบบเทียบลายนิ้วมือเฉพาะจุดเลือกตั้งแบบ 1:1 กับข้อมูลบนบัตรประชาชน ใช้เพื่อกันสวมสิทธิ์เท่านั้น และไม่เก็บข้อมูลชีวมิติใหม่หลังยืนยันเสร็จ
                     </li>
                     <li>
                         <strong>Transparency Server</strong><br>
-                        ระบบเปิดให้ตรวจสอบสถานะของ <strong>"รหัสบนหางบัตร"</strong> แบบ Anonymous โดยไม่ต้อง Login ยืนยันตัวตน
+                        ระบบกลางบันทึกสถานะ QR ว่า "ยังไม่ยืนยัน/ยืนยันแล้ว" และส่งออกเฉพาะสถานะตรวจสอบรวมบน Dashboard โดยไม่เปิดช่องสแกนสาธารณะ
                     </li>
                 </ul>
             </div>
@@ -462,7 +466,7 @@
                 </div>
                 <div class="card">
                     <h3><i class="fa-solid fa-globe"></i> Digital Platform</h3>
-                    <p>เว็บกลางแสดงบัตรเลือกตั้งทั้งหมด (Public) และแอปทางรัฐ (Private) สำหรับยืนยันความเป็นเจ้าของ</p>
+                    <p>เว็บกลางแสดงผลรวมการตรวจสอบ (Public) ส่วนการสแกนยืนยันทำได้เฉพาะแอปทางรัฐ (Private) และจำกัดครั้งเดียว</p>
                 </div>
             </div>
             <div>
@@ -516,7 +520,7 @@
                 <p style="font-weight: bold; color: var(--text-primary); margin-bottom: 5px;">(จบข้อสงสัยด้วยมือตัวเอง)</p>
                 <div style="margin-top: 15px; font-size: 1rem;">
                     <p><strong>ปัญหาเก่า:</strong> กาเสร็จแล้วหย่อนลงหีบ ไม่รู้อีกเลยว่าคะแนนเราไปไหน ถูกนับจริงหรือไม่</p>
-                    <p><strong>ระบบใหม่:</strong> "หางบัตรในมือคุณ" กุญแจดอกเดียวที่ใช้ไขดูในระบบได้ว่า คะแนนของคุณถูกนับแล้วหรือยัง</p>
+                    <p><strong>ระบบใหม่:</strong> "หางบัตรในมือคุณ" ใช้ยืนยันได้ครั้งเดียวผ่านแอปทางรัฐ และหลังยืนยันแล้วระบบล็อกถาวร ลดความเสี่ยงการตรวจสอบย้อนกลับ</p>
                 </div>
             </div>
         </div>
