Require actual voter identity check before one-time QR verification

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <i class="fa-solid fa-ticket scene-sub" style="right: -10px; bottom: -10px; color: var(--accent);"></i>
                     </div>
                     <h3>One-Time Verify ผ่านแอปทางรัฐ</h3>
-                    <p>สแกน QR Code บน <strong>"หางบัตร"</strong> ได้เฉพาะในแอปทางรัฐเท่านั้น และใช้ได้เพียง <strong>1 ครั้ง</strong> ต่อ 1 สิทธิ์ เมื่อยืนยันแล้ว QR จะถูกล็อกถาวร</p>
+                    <p>สแกน QR Code บน <strong>"หางบัตร"</strong> ได้เฉพาะในแอปทางรัฐเท่านั้น โดยระบบต้องยืนยันก่อนว่า <strong>ผู้สแกนคือผู้มาใช้สิทธิจริง</strong> จึงอนุญาตให้สแกนได้เพียง <strong>1 ครั้ง</strong> ต่อ 1 สิทธิ์ และเมื่อยืนยันแล้ว QR จะถูกล็อกถาวร</p>
                 </div>
             </div>
 
